--- a/stats.ipynb
+++ b/stats.ipynb
@@ -170,11 +170,11 @@
     "# (-0.003925756872019768, 0.003925756872019766)\n",
     "\n",
     "#ydsGained\n",
-    "print(sp.t.interval(0.9, 1086, 0, ydsGainedRegress.stderr))\n",
+    "print(sp.t.interval(0.90, 1086, 0, ydsGainedRegress.stderr))\n",
     "#(-0.008147194908368058, 0.008147194908368054)\n",
     "\n",
     "# ydsLost\n",
-    "print(sp.t.interval(0.9, 1086, 0, ydsLostRegress.stderr))\n",
+    "print(sp.t.interval(0.9o, 1086, 0, ydsLostRegress.stderr))\n",
     "#(-0.008846236718904941, 0.008846236718904938)"
    ]
   },
