--- a/stats.ipynb
+++ b/stats.ipynb
@@ -174,7 +174,7 @@
     "#(-0.008147194908368058, 0.008147194908368054)\n",
     "\n",
     "# ydsLost\n",
-    "print(sp.t.interval(0.9o, 1086, 0, ydsLostRegress.stderr))\n",
+    "print(sp.t.interval(0.90, 1086, 0, ydsLostRegress.stderr))\n",
     "#(-0.008846236718904941, 0.008846236718904938)"
    ]
   },
